GUI: Raster erstellt